# crewai-business-strategey-survey

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
logs/: log.txt
search/: research_report_chatgpt.md  research_report_gemini.md
src/multi_crew_agent/: crew.py  main.py
src/multi_crew_agent/config/: agents.yaml  tasks.yaml
src/multi_crew_agent/tools/: merge_files_tool.py  send_mail_tool.py
